# Real-Time-Financial-News-Sentiment-Pipeline

./: .env  README.md  main.py  pyproject.toml
app/: main.py  schemas.py  sentiment.py
basics/: main.py  sentiment.py
stream/: news.py
